@@ -18,9 +18,9 @@ int ompi_mtl_mxm_cancel(struct mca_mtl_base_module_t* mtl,
     mxm_error_t err;
     mca_mtl_mxm_request_t *mtl_mxm_request = (mca_mtl_mxm_request_t*) mtl_request;
 
-    err = mxm_req_cancel(&mtl_mxm_request->mxm_request);
+    err = mxm_req_cancel(mtl_mxm_request->mxm_base_request);
     if (MXM_OK == err) {
-        err = mxm_req_test(&mtl_mxm_request->mxm_request);
+        err = mxm_req_test(mtl_mxm_request->mxm_base_request);
         if (MXM_OK == err) {
             mtl_request->ompi_req->req_status._cancelled = true;
             mtl_mxm_request->super.completion_callback(&mtl_mxm_request->super);
