@@ -18,26 +18,27 @@
 #include "mtl_mxm_request.h"
 
 
-static void ompi_mtl_mxm_recv_completion_cb(mxm_req_t *req)
+static void ompi_mtl_mxm_recv_completion_cb(void *context)
 {
-    mca_mtl_mxm_request_t *mtl_mxm_request = (mca_mtl_mxm_request_t *) req->context;
-    struct ompi_request_t *ompi_req = mtl_mxm_request->super.ompi_req;
+	mca_mtl_mxm_request_t *req = (mca_mtl_mxm_request_t *) context;
+    struct ompi_request_t *ompi_req = req->super.ompi_req;
+    mxm_recv_req_t *mxm_recv_req = (mxm_recv_req_t *)req->mxm_base_request;
 
     /* Set completion status and envelope */
-    ompi_req->req_status.MPI_TAG    = req->completion.sender_tag;
-    ompi_req->req_status.MPI_SOURCE = req->completion.sender_imm;
-    ompi_req->req_status.MPI_ERROR  = ompi_mtl_mxm_to_mpi_status(req->completion.status);
-    ompi_req->req_status._ucount    = req->completion.actual_len;
+    ompi_req->req_status.MPI_TAG    = mxm_recv_req->completion.sender_tag;
+    ompi_req->req_status.MPI_SOURCE = mxm_recv_req->completion.sender_imm;
+    ompi_req->req_status.MPI_ERROR  = ompi_mtl_mxm_to_mpi_status(req->mxm_base_request->error);
+    ompi_req->req_status._ucount    = mxm_recv_req->completion.actual_len;
 
     /* Copy data */
-    ompi_mtl_datatype_unpack(mtl_mxm_request->convertor, mtl_mxm_request->buf,
-                             req->completion.actual_len);
+    ompi_mtl_datatype_unpack(req->convertor, req->buf,
+                             mxm_recv_req->completion.actual_len);
 
-    if (mtl_mxm_request->free_after) {
-        free(mtl_mxm_request->buf);
+    if (req->free_after) {
+        free(req->buf);
     }
 
-    mtl_mxm_request->super.completion_callback(&mtl_mxm_request->super);
+    req->super.completion_callback(&req->super);
 }
 
 
@@ -47,9 +48,8 @@ int ompi_mtl_mxm_irecv(struct mca_mtl_base_module_t* mtl,
                        struct mca_mtl_request_t *mtl_request)
 {
     mca_mtl_mxm_request_t * mtl_mxm_request;
-    mca_mtl_mxm_endpoint_t* mxm_endpoint;
-    ompi_proc_t* ompi_proc;
     mxm_error_t err;
+    mxm_recv_req_t *mxm_recv_req;
     int ret;
 
     mtl_mxm_request = (mca_mtl_mxm_request_t*) mtl_request;
@@ -63,22 +63,22 @@ int ompi_mtl_mxm_irecv(struct mca_mtl_base_module_t* mtl,
         return ret;
     }
 
-    /* prepare a receive request embedded in the MTL request */
-    mtl_mxm_request->mxm_request.state     = MXM_REQ_NEW;
-    mtl_mxm_request->mxm_request.mq        = (mxm_mq_h)comm->c_pml_comm;
-    mtl_mxm_request->mxm_request.tag       = tag;
-    mtl_mxm_request->mxm_request.tag_mask  = (tag == MPI_ANY_TAG) ? 0 : 0xffffffffU;
-    mtl_mxm_request->mxm_request.conn      = (src == MPI_ANY_SOURCE) ? NULL :
-                                               ompi_mtl_mxm_conn_lookup(comm, src);
+    mxm_recv_req = (mxm_recv_req_t *)mtl_mxm_request->mxm_base_request;
 
-    mtl_mxm_request->mxm_request.data.buf.ptr = mtl_mxm_request->buf;
-    mtl_mxm_request->mxm_request.data.buf.len = mtl_mxm_request->length;
-    mtl_mxm_request->mxm_request.completed_cb = ompi_mtl_mxm_recv_completion_cb;
-    mtl_mxm_request->mxm_request.context      = mtl_mxm_request;
-    mtl_mxm_request->mxm_request.flags        = MXM_REQ_FLAG_NONBLOCK;
+    /* prepare a receive request embedded in the MTL request */
+    mxm_recv_req->base.state    = MXM_REQ_NEW;
+    mxm_recv_req->base.mq       = (mxm_mq_h)comm->c_pml_comm;
+    mxm_recv_req->tag      		= tag;
+    mxm_recv_req->tag_mask  	= (tag == MPI_ANY_TAG) ? 0 : 0xffffffffU;
+    mxm_recv_req->base.conn     = (src == MPI_ANY_SOURCE) ? NULL : ompi_mtl_mxm_conn_lookup(comm, src);
+
+    mxm_recv_req->base.data.buffer.ptr 		= mtl_mxm_request->buf;
+    mxm_recv_req->base.data.buffer.length	= mtl_mxm_request->length;
+    mxm_recv_req->base.completed_cb 		= ompi_mtl_mxm_recv_completion_cb;
+    mxm_recv_req->base.context 				= mtl_mxm_request;
 
     /* post-recv */
-    err = mxm_req_recv(&mtl_mxm_request->mxm_request);
+    err = mxm_req_recv(mxm_recv_req);
     if (MXM_OK != err) {
         orte_show_help("help-mtl-mxm.txt", "error posting receive", true,
                        mxm_error_string(err), mtl_mxm_request->buf, mtl_mxm_request->length);
